K8-manifest/backend-amanifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: hammad-inventory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: zdpapps.azurecr.io/hammad-backend-image
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: hammad-inventory-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
