K8-manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: testingcluster
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
