K8-manifest/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hammad-frontend-ingress
  namespace: hammad-inventory-app
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "ZDP-DEV-appgateway-certificates"
    appgw.ingress.kubernetes.io/health-probe-path: "/"
    appgw.ingress.kubernetes.io/request-timeout: "90"
spec:
  rules:
    - host: zdp.unit.zones.com
      http:
        paths:
          - path: /hammad
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: 
                  number: 3000
